--- a/templates/base.html
+++ b/templates/base.html
@@ -11,10 +11,26 @@
               rel="stylesheet"
               integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
               crossorigin="anonymous">
+        <link rel="stylesheet"
+              href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     </head>
     <body>
-        {% block content %}
-        {% endblock content %}
+        <header class="bg-dark my-2">
+            {% include 'navbar.html' %}
+        </header>
+        <main class="bg-light">
+            <div class="container-fuild">
+                <div class="row justify-content-center">
+                    <div class="col-8">
+                        {% block content %}
+                        {% endblock content %}
+                    </div>
+                </div>
+            </div>
+        </main>
+        <footer class="bg-dark py-4 my-2">
+            {% include 'footer.html' %}
+        </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
                 crossorigin="anonymous"></script>
